// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`enroll-profile-with-password should add new field to view and remove it from the payload before submission 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  role="presentation"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <h1
                          class="MuiTypography-root MuiTypography-h4 emotion-13"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h1>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiBox-root emotion-12"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-16"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-18"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-19"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-20"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-21"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-18"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-19"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-20"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-21"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-18"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-19"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-20"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-21"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-18"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-19"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-20"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input emotion-21"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-18"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-19"
                          data-shrink="false"
                          for="userProfile.address"
                          id="userProfile.address-label"
                        >
                          <span>
                            Street Address
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-20"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.address-label"
                            class="MuiInputBase-input emotion-21"
                            data-se="userProfile.address"
                            id="userProfile.address"
                            name="userProfile.address"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth emotion-43"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-11"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-45"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-46"
                    >
                      <div
                        class="MuiBox-root emotion-47"
                      >
                        <div
                          class="MuiBox-root emotion-12"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-16"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-47"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-51"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom error message and prevent submission when failure is triggered in preSubmit callback 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  role="presentation"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="82mvyq"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <div
                          class="emotion-15"
                        >
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            This is my custom global message
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h1
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h1>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-23"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.lastName-error"
                            aria-errormessage="userProfile.lastName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium MuiFormHelperText-filled emotion-29"
                          id="userProfile.lastName-error"
                        >
                          <span
                            class="MuiBox-root emotion-30"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            Custom preSubmit error
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-50"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-23"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-56"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show custom field level error message and custom global message on page load 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  role="presentation"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="82mvyq"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <div
                          class="emotion-15"
                        >
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            This is my custom global message
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h1
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h1>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-23"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.lastName-error"
                            aria-errormessage="userProfile.lastName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-29"
                          id="userProfile.lastName-error"
                        >
                          <span
                            class="MuiBox-root emotion-30"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            Custom parseSchema error
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth emotion-48"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-50"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-51"
                    >
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-23"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-52"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-56"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show generic error message and prevent updated view rendering when failure is triggered in postSubmit callback 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  role="presentation"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="82mvyq"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <div
                          class="emotion-15"
                        >
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            We could not process your registration at this time. Please try again later.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h1
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h1>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-23"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary MuiFormLabel-filled MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-invalid="false"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth emotion-45"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-47"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-48"
                    >
                      <div
                        class="MuiBox-root emotion-49"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-23"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-49"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-53"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;

exports[`enroll-profile-with-password should show validation error messages on all fields when submitted without completing required fields 1`] = `
<div>
  <div
    class="emotion-0"
  >
    <div
      class="MuiScopedCssBaseline-root emotion-1"
    >
      <main
        class="MuiBox-root emotion-2"
        data-commit="b9bbc0140703c3fbf0e2e58920362e70"
        data-se="auth-container main-container"
        data-version="0.0.0"
        dir="ltr"
        id="okta-sign-in"
        lang="en"
      >
        <div
          class="MuiScopedCssBaseline-root emotion-3"
        >
          <div
            class="MuiBox-root emotion-4"
          >
            <div
              class="MuiBox-root emotion-5"
            >
              <div
                class="MuiBox-root emotion-6"
                data-se="okta-sign-in-header auth-header "
              >
                <h1
                  class="MuiTypography-root MuiTypography-h1 emotion-7"
                  role="presentation"
                  tabindex="-1"
                />
              </div>
              <div
                class="MuiBox-root emotion-8"
              >
                <form
                  aria-live="polite"
                  class="o-form MuiBox-root emotion-9"
                  data-se="o-form"
                  novalidate=""
                >
                  <div
                    class="MuiBox-root emotion-10"
                  >
                    <div
                      aria-label="error"
                      aria-labelledby="82mvyq"
                      class="MuiPaper-root MuiPaper-elevation MuiPaper-rounded MuiPaper-elevation0 MuiAlert-root MuiAlert-colorError MuiAlert-calloutError MuiAlert-callout emotion-11"
                      role="alert"
                    >
                      <div
                        class="MuiAlert-icon emotion-12"
                      >
                        <svg
                          aria-hidden="true"
                          class="MuiSvgIcon-root MuiSvgIcon-fontSizeInherit emotion-13"
                          fill="none"
                          focusable="false"
                          viewBox="0 0 24 24"
                          xmlns="http://www.w3.org/2000/svg"
                        >
                          <path
                            clip-rule="evenodd"
                            d="M9.879 1.707a3 3 0 0 1 4.242 0l8.172 8.172a3 3 0 0 1 0 4.242l-8.172 8.172a3 3 0 0 1-4.242 0L1.707 14.12a3 3 0 0 1 0-4.242L9.88 1.707ZM12 13a1 1 0 0 1-1-1V7h2v5a1 1 0 0 1-1 1Zm0 1.75a1.25 1.25 0 1 0 0 2.5 1.25 1.25 0 0 0 0-2.5Z"
                            fill="currentColor"
                            fill-rule="evenodd"
                          />
                        </svg>
                      </div>
                      <div
                        class="MuiAlert-message emotion-14"
                      >
                        <div
                          class="emotion-15"
                        >
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            We found some errors. Please review the form and make corrections.
                          </div>
                        </div>
                      </div>
                    </div>
                  </div>
                  <div
                    class="MuiBox-root emotion-17"
                  >
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <h1
                          class="MuiTypography-root MuiTypography-h4 emotion-20"
                          data-se="o-form-head"
                          tabindex="-1"
                        >
                          Sign up
                        </h1>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiBox-root emotion-19"
                      >
                        <p
                          class="MuiTypography-root MuiTypography-body1 emotion-23"
                          data-se="o-form-explain"
                          tabindex="-1"
                        >
                          Fields are required unless marked optional.
                        </p>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.lastName"
                          id="userProfile.lastName-label"
                        >
                          <span>
                            Last name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.lastName-error"
                            aria-errormessage="userProfile.lastName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.lastName-label"
                            autocomplete="family-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.lastName"
                            id="userProfile.lastName"
                            name="userProfile.lastName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-29"
                          id="userProfile.lastName-error"
                        >
                          <span
                            class="MuiBox-root emotion-30"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.firstName"
                          id="userProfile.firstName-label"
                        >
                          <span>
                            First name
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.firstName-error"
                            aria-errormessage="userProfile.firstName-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.firstName-label"
                            autocomplete="given-name"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.firstName"
                            id="userProfile.firstName"
                            name="userProfile.firstName"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-29"
                          id="userProfile.firstName-error"
                        >
                          <span
                            class="MuiBox-root emotion-30"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.email"
                          id="userProfile.email-label"
                        >
                          <span>
                            Email
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.email-error"
                            aria-errormessage="userProfile.email-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.email-label"
                            autocomplete="email"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.email"
                            id="userProfile.email"
                            inputmode="email"
                            name="userProfile.email"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-29"
                          id="userProfile.email-error"
                        >
                          <span
                            class="MuiBox-root emotion-30"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.login"
                          id="userProfile.login-label"
                        >
                          <span>
                            Username
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.login-error"
                            aria-errormessage="userProfile.login-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.login-label"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.login"
                            id="userProfile.login"
                            name="userProfile.login"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-29"
                          id="userProfile.login-error"
                        >
                          <span
                            class="MuiBox-root emotion-30"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <div
                        class="MuiFormControl-root MuiFormControl-marginNormal MuiFormControl-fullWidth emotion-25"
                      >
                        <label
                          class="MuiFormLabel-root MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined MuiFormLabel-colorPrimary Mui-error MuiInputLabel-root MuiInputLabel-formControl MuiInputLabel-sizeMedium MuiInputLabel-outlined emotion-26"
                          data-shrink="false"
                          for="userProfile.address"
                          id="userProfile.address-label"
                        >
                          <span>
                            Street Address
                          </span>
                        </label>
                        <div
                          class="MuiInputBase-root MuiInputBase-colorPrimary Mui-error MuiInputBase-formControl emotion-27"
                          required="true"
                        >
                          <input
                            aria-describedby="userProfile.address-error"
                            aria-errormessage="userProfile.address-error"
                            aria-invalid="true"
                            aria-labelledby="userProfile.address-label"
                            class="MuiInputBase-input emotion-28"
                            data-se="userProfile.address"
                            id="userProfile.address"
                            name="userProfile.address"
                            required=""
                            type="text"
                          />
                        </div>
                        <div
                          class="MuiFormHelperText-root Mui-error MuiFormHelperText-sizeMedium emotion-29"
                          id="userProfile.address-error"
                        >
                          <span
                            class="MuiBox-root emotion-30"
                          >
                            Error:
                          </span>
                          <div
                            class="MuiBox-root emotion-2"
                          >
                            This field cannot be left blank
                          </div>
                        </div>
                      </div>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <button
                        class="MuiButtonBase-root MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth Mui-focusVisible MuiButton-root MuiButton-primary MuiButton-primaryPrimary MuiButton-sizeMedium MuiButton-primarySizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-fullWidth emotion-65"
                        data-se="save"
                        tabindex="0"
                        type="submit"
                      >
                        Sign Up
                      </button>
                    </div>
                    <div
                      class="MuiBox-root emotion-18"
                    >
                      <hr
                        class="MuiDivider-root MuiDivider-fullWidth emotion-67"
                        data-se="separation-line"
                      />
                    </div>
                    <div
                      class="MuiBox-root emotion-68"
                    >
                      <div
                        class="MuiBox-root emotion-69"
                      >
                        <div
                          class="MuiBox-root emotion-19"
                        >
                          <p
                            class="MuiTypography-root MuiTypography-body1 emotion-23"
                            data-se="haveaccount"
                            tabindex="-1"
                          >
                            Already have an account?
                          </p>
                        </div>
                      </div>
                      <div
                        class="MuiBox-root emotion-69"
                      >
                        <button
                          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways MuiLink-button emotion-73"
                          data-se="back"
                          role="link"
                          type="button"
                        >
                          Sign In
                        </button>
                      </div>
                    </div>
                  </div>
                </form>
              </div>
            </div>
          </div>
        </div>
      </main>
    </div>
  </div>
</div>
`;
